--- a/webPackage/css/style.css
+++ b/webPackage/css/style.css
@@ -1,83 +1,256 @@
-/*
-Error: Undefined variable: "$combo".
-        on line 36 of css/sass/partials/_colors.scss
-        from line 2 of css/sass/style.scss
+/*=FLATDOC THEME values------------------------------------------------*/
+.clearfix {
+  clear: both; }
 
-31: $links_border_left: 3px solid $color_3;
-32: 
-33: 
-34: /* hover effects *\/
-35: 
-36: @mixin underline_link { 
-37:   border-bottom: $links_border_bottom; 
-38: }
-39: 
-40: @mixin colored_link {
-41:   border-bottom: none;
+.fixed {
+  position: fixed;
+  z-index: 1000; }
 
-Backtrace:
-css/sass/partials/_colors.scss:36
-css/sass/style.scss:2
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/variable.rb:49:in `_perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/node.rb:50:in `perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:170:in `perform_arg'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:124:in `block in _perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:124:in `each'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:124:in `each_with_index'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:124:in `each'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:124:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:124:in `_perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/script/tree/node.rb:50:in `perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:468:in `visit_variable'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:325:in `block (2 levels) in visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:325:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:325:in `block in visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:88:in `block in with_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:88:in `with_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:322:in `visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/engine.rb:368:in `_render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/engine.rb:285:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:490:in `update_stylesheet'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `each'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:328:in `block in watch'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:254:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:254:in `report_changes'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:323:in `poll_changed_directories'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Undefined variable: \"$combo\".\A         on line 36 of css/sass/partials/_colors.scss\A         from line 2 of css/sass/style.scss\A \A 31: $links_border_left: 3px solid $color_3;\A 32: \A 33: \A 34: /* hover effects */\A 35: \A 36: @mixin underline_link { \A 37:   border-bottom: $links_border_bottom; \A 38: }\A 39: \A 40: @mixin colored_link {\A 41:   border-bottom: none;"; }
+.fullwidth {
+  width: 100%; }
+
+.screan-reader-text {
+  position: absolute;
+  height: 0;
+  width: 0;
+  opacity: 0;
+  font-size: 0; }
+
+.hidden {
+  display: none; }
+
+.top0 {
+  top: 0; }
+
+body#enjoy-mondays {
+  background-color: #E9E8E3; }
+
+#enjoy-mondays .content-root,
+#enjoy-mondays .menubar,
+#enjoy-mondays .content {
+  background-color: #E9E8E3; }
+#enjoy-mondays #main-header {
+  background-color: #E9E8E3; }
+#enjoy-mondays .content p {
+  background-color: #E9E8E3; }
+#enjoy-mondays .content code {
+  background-color: #F3F6FB; }
+#enjoy-mondays .content .hljs, #enjoy-mondays .content pre > code {
+  background-color: #3F3F3F; }
+#enjoy-mondays .content ul, #enjoy-mondays .content ol {
+  background-color: #E9E8E3; }
+
+@media (min-width: 1180px) {
+  #enjoy-mondays .content,
+  #enjoy-mondays .content-root {
+    background-color: #3F3F3F; } }
+body#enjoy-mondays {
+  font-family: "Lato", sans-serif;
+  font-weight: 100;
+  color: #4a4a4a; }
+
+#enjoy-mondays a {
+  font-size: 1em;
+  font-weight: 900;
+  color: #3A3A3A; }
+
+#enjoy-mondays h1 {
+  font-family: "Dosis", sans-serif !important;
+  font-weight: 600 !important;
+  background-color: #E9E8E3; }
+
+#enjoy-mondays h2 {
+  font-family: "Dosis", sans-serif !important;
+  font-weight: 600 !important;
+  background-color: #E9E8E3; }
+
+#enjoy-mondays h3 {
+  font-family: "Dosis", sans-serif !important;
+  font-weight: 600 !important;
+  background-color: #E9E8E3; }
+
+#enjoy-mondays h4 {
+  font-family: "Dosis", sans-serif !important;
+  font-weight: 600 !important;
+  background-color: #E9E8E3; }
+
+#enjoy-mondays h5 {
+  font-family: "Dosis", sans-serif !important;
+  font-weight: 600 !important;
+  background-color: #E9E8E3; }
+
+#enjoy-mondays h6 {
+  font-family: "Dosis", sans-serif !important;
+  font-weight: 600 !important;
+  background-color: #E9E8E3; }
+
+#enjoy-mondays h1 {
+  font-size: 2.5em;
+  text-transform: uppercase; }
+
+#enjoy-mondays .content p {
+  font-size: 1.25em; }
+#enjoy-mondays .content pre {
+  font-size: 1.15em; }
+
+#enjoy-mondays a {
+  text-decoration: none; }
+  #enjoy-mondays a:hover, #enjoy-mondays a.active {
+    border-bottom: 3px solid #DF3F54; }
+    #enjoy-mondays a:hover::after, #enjoy-mondays a.active::after {
+      background: none; }
+#enjoy-mondays .menu a:visited, #enjoy-mondays .menu a:hover, #enjoy-mondays .menu a.active {
+  margin-left: -3px;
+  border-left: 3px solid #DF3F54;
+  border-bottom: none;
+  color: #DF3F54; }
+#enjoy-mondays .menu .level-2 > a {
+  padding-left: 3px; }
+
+#enjoy-mondays #main-header .left-content {
+  position: relative;
+  left: 220px; }
+  @media (max-width: 767px) {
+    #enjoy-mondays #main-header .left-content {
+      left: 0; } }
+@media (max-width: 480px) {
+  #enjoy-mondays #main-header li {
+    margin-left: 20px; } }
+#enjoy-mondays #main-header .right-content {
+  float: right;
+  height: 20px; }
+  @media (max-width: 900px) {
+    #enjoy-mondays #main-header .right-content {
+      width: 168px;
+      height: 50px;
+      top: 3px; } }
+  @media (max-width: 650px) {
+    #enjoy-mondays #main-header .right-content {
+      display: none; } }
+@media (max-width: 650px) {
+  #enjoy-mondays #main-header {
+    padding-left: 0;
+    padding-right: 0; }
+    #enjoy-mondays #main-header .left-content {
+      float: none; }
+      #enjoy-mondays #main-header .left-content h1 {
+        margin-left: 30px;
+        float: left; }
+      #enjoy-mondays #main-header .left-content ul {
+        float: right;
+        margin-right: 30px; }
+        #enjoy-mondays #main-header .left-content ul li {
+          float: left; }
+          #enjoy-mondays #main-header .left-content ul li:last-child a {
+            padding-right: 0; } }
+@media (max-width: 350px) {
+  #enjoy-mondays #main-header {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    height: 50px; }
+    #enjoy-mondays #main-header .left-content h1 {
+      float: none;
+      margin: 10px auto 12px auto; }
+    #enjoy-mondays #main-header .left-content ul {
+      float: none;
+      display: inline-block; } }
+
+#enjoy-mondays #fix-placeholder {
+  height: 51px; }
+  @media (max-width: 350px) {
+    #enjoy-mondays #fix-placeholder {
+      height: 81px; } }
+
+@media (max-width: 767px) {
+  #enjoy-mondays .content {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%; } }
+#enjoy-mondays .content hr {
+  border: 0;
+  height: 3px;
+  width: 18%;
+  margin: 0 auto 3%;
+  clear: both; }
+
+#enjoy-mondays #logo {
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+  width: 28px;
+  height: auto; }
+  #enjoy-mondays #logo img {
+    width: 100%; }
+
+@media (min-width: 1180px) {
+  #enjoy-mondays .content {
+    width: 100%;
+    padding-top: 0;
+    padding-bottom: 0; }
+    #enjoy-mondays .content h1, #enjoy-mondays .content h2, #enjoy-mondays .content h3, #enjoy-mondays .content h4, #enjoy-mondays .content h5, #enjoy-mondays .content h6 {
+      width: 550px;
+      margin: 0;
+      padding-left: 40px;
+      position: relative;
+      z-index: 2; }
+    #enjoy-mondays .content h1:first-child {
+      padding-top: 30px; }
+    #enjoy-mondays .content ul, #enjoy-mondays .content ol {
+      margin-left: 0;
+      padding-left: 60px !important;
+      position: relative;
+      z-index: 2; }
+    #enjoy-mondays .content p {
+      position: relative;
+      z-index: 2; }
+    #enjoy-mondays .content pre {
+      width: calc(100% - 550px); }
+    #enjoy-mondays .content > *:last-child {
+      padding-bottom: 40px; } }
+#color-swapper {
+  display: none; }
+
+@media (min-width: 767px) {
+  #color-swapper {
+    display: initial;
+    left: 0;
+    padding: 5px; }
+    #color-swapper tr {
+      height: 15px;
+      overflow: hidden; }
+      #color-swapper tr:hover {
+        height: 12px;
+        cursor: pointer; }
+    #color-swapper td {
+      font-size: 0;
+      line-height: 0;
+      width: 27px;
+      border-right: 1px solid white; }
+      #color-swapper td a {
+        width: 27px;
+        height: 12px;
+        display: block; }
+
+  #color-swapper td.GRAY {
+    background-color: #4a4a4a; }
+  #color-swapper td.LIGHT_GRAY {
+    background-color: #E9E8E3; }
+  #color-swapper td.DARK_GRAY {
+    background-color: #3A3A3A; }
+  #color-swapper td.DARK_BLUE {
+    background-color: #363B48; }
+  #color-swapper td.FUXSIA {
+    background-color: #DF3F54; }
+  #color-swapper td.LIGHT_FUXSIA {
+    background-color: #F17C71; }
+  #color-swapper td.ZENBURN_BG {
+    background-color: #3F3F3F; }
+  #color-swapper td.LIGHT_WHITE {
+    background-color: #F3F6FB; }
+  #color-swapper td.LIGHTER_WHITE {
+    background-color: #F8F8F4; } }
+
+/*# sourceMappingURL=style.css.map */
