--- a/webPackage/css/SASS/partials/_colors.scss
+++ b/webPackage/css/SASS/partials/_colors.scss
@@ -11,6 +11,7 @@ $LIGHTER_WHITE: #F8F8F4;
 $LIGHT_WHITE: #F3F6FB;
 $BLACK: #000;
 $WHITE: #FFF;
+$LIGHTER_FUXSIA: #ff3caa;
 
 
 
@@ -22,9 +23,11 @@ $combo1: $LIGHT_GRAY, $ZENBURN_BG, $GRAY, $DARK_GRAY, $FUXSIA, $LIGHT_WHITE;
 
 $combo2: $DARK_GRAY, $BLACK, $LIGHT_GRAY, $LIGHT_WHITE, $LIGHT_FUXSIA, $BLACK;
 
+
 $combo3: $DARK_BLUE, $BLACK, $LIGHT_GRAY, $LIGHT_WHITE, $LIGHT_FUXSIA;
 
 $combo4: $FUXSIA, $ZENBURN_BG, $LIGHT_GRAY, $LIGHT_WHITE, $LIGHT_FUXSIA, $ZENBURN_BG;
 
 $combo5: $LIGHTER_WHITE, $ZENBURN_BG, $GRAY, $DARK_GRAY, $FUXSIA, $WHITE;
+
 
