--- a/webPackage/css/style.css
+++ b/webPackage/css/style.css
@@ -22,88 +22,72 @@
 .top0 {
   top: 0; }
 
-body#enjoy-mondays {
-  background-color: #E9E8E3; }
-
-#enjoy-mondays .content-root,
-#enjoy-mondays .menubar,
-#enjoy-mondays .content {
-  background-color: #E9E8E3; }
-#enjoy-mondays #main-header {
-  background-color: #E9E8E3; }
-#enjoy-mondays .content p {
-  background-color: #E9E8E3; }
-#enjoy-mondays .content code {
-  background-color: #F3F6FB; }
-#enjoy-mondays .content .hljs, #enjoy-mondays .content pre > code {
-  background-color: #3F3F3F; }
-#enjoy-mondays .content ul, #enjoy-mondays .content ol {
-  background-color: #E9E8E3; }
-
-@media (min-width: 1180px) {
+#enjoy-mondays {
+  background-color: #3A3A3A; }
+  #enjoy-mondays #main-header,
+  #enjoy-mondays .content-root,
+  #enjoy-mondays .menubar,
   #enjoy-mondays .content,
-  #enjoy-mondays .content-root {
-    background-color: #3F3F3F; } }
-body#enjoy-mondays {
+  #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
+    background-color: #3A3A3A; }
+  @media (min-width: 1180px) {
+    #enjoy-mondays .content,
+    #enjoy-mondays .content-root {
+      background-color: #000; } }
+  #enjoy-mondays .content p, #enjoy-mondays .content ul, #enjoy-mondays .content ol {
+    background-color: #3A3A3A; }
+  #enjoy-mondays .content code {
+    background-color: #000; }
+  #enjoy-mondays .content .hljs, #enjoy-mondays .content pre > code {
+    background-color: #000; }
+
+#enjoy-mondays #main-header {
+  text-shadow: 0 1px 0 #000;
+  border-bottom: solid 1px #000; }
+  #enjoy-mondays #main-header li {
+    border-right: 1px solid #000; }
+  #enjoy-mondays #main-header h1 + ul {
+    border-left: 1px solid #000; }
+#enjoy-mondays .menubar {
+  border-right: solid 1px #000; }
+#enjoy-mondays h4 {
+  border-bottom: solid 1px #000; }
+
+#enjoy-mondays {
   font-family: "Lato", sans-serif;
   font-weight: 100;
-  color: #4a4a4a; }
-
-#enjoy-mondays a {
-  font-size: 1em;
-  font-weight: 900;
-  color: #3A3A3A; }
-
-#enjoy-mondays h1 {
-  font-family: "Dosis", sans-serif !important;
-  font-weight: 600 !important;
-  background-color: #E9E8E3; }
-
-#enjoy-mondays h2 {
-  font-family: "Dosis", sans-serif !important;
-  font-weight: 600 !important;
-  background-color: #E9E8E3; }
-
-#enjoy-mondays h3 {
-  font-family: "Dosis", sans-serif !important;
-  font-weight: 600 !important;
-  background-color: #E9E8E3; }
-
-#enjoy-mondays h4 {
-  font-family: "Dosis", sans-serif !important;
-  font-weight: 600 !important;
-  background-color: #E9E8E3; }
-
-#enjoy-mondays h5 {
-  font-family: "Dosis", sans-serif !important;
-  font-weight: 600 !important;
-  background-color: #E9E8E3; }
-
-#enjoy-mondays h6 {
-  font-family: "Dosis", sans-serif !important;
-  font-weight: 600 !important;
-  background-color: #E9E8E3; }
-
-#enjoy-mondays h1 {
-  font-size: 2.5em;
-  text-transform: uppercase; }
-
-#enjoy-mondays .content p {
-  font-size: 1.25em; }
-#enjoy-mondays .content pre {
-  font-size: 1.15em; }
+  color: #000; }
+  #enjoy-mondays a {
+    font-size: 1em;
+    font-weight: 900;
+    color: #F3F6FB; }
+  #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
+    font-family: "Dosis", sans-serif !important;
+    font-weight: 600 !important;
+    color: #F3F6FB; }
+  #enjoy-mondays h1 {
+    font-size: 2.5em;
+    text-transform: uppercase; }
+  #enjoy-mondays .content p {
+    font-size: 1.25em; }
+  #enjoy-mondays .content pre {
+    font-size: 1.15em; }
+  #enjoy-mondays .content p > code, #enjoy-mondays .content li > code {
+    color: #3A3A3A; }
+  #enjoy-mondays .content em {
+    color: #000; }
 
 #enjoy-mondays a {
   text-decoration: none; }
   #enjoy-mondays a:hover, #enjoy-mondays a.active {
-    border-bottom: 3px solid #DF3F54; }
+    border-bottom: 3px solid #F3F6FB; }
     #enjoy-mondays a:hover::after, #enjoy-mondays a.active::after {
       background: none; }
 #enjoy-mondays .menu a:visited, #enjoy-mondays .menu a:hover, #enjoy-mondays .menu a.active {
   margin-left: -3px;
-  border-left: 3px solid #DF3F54;
+  border-left: 3px solid #F3F6FB;
   border-bottom: none;
-  color: #DF3F54; }
+  color: #F3F6FB !important; }
 #enjoy-mondays .menu .level-2 > a {
   padding-left: 3px; }
 
