index.html for online testing.

--- a/webPackage/css/SASS/_settings.scss
+++ b/webPackage/css/SASS/_settings.scss
@@ -106,10 +106,10 @@ $base_color: #2196F3;
 
 // $base_color: #009688;
 // $base_color: #E91E63;
-// $base_color: #4CAF50;
+ $base_color: #4CAF50;
 // $base_color: #F57F17;
 // $base_color: #795548;
- $base_color: #000;
+// $base_color: #000;
 // $base_color: #fff;
 // $base_color: #FFCDD2;
 // $base_color: #3F51B5;
