--- a/webPackage/css/style.css
+++ b/webPackage/css/style.css
@@ -23,48 +23,48 @@
   top: 0; }
 
 #enjoy-mondays {
-  background-color: #3A3A3A; }
+  background-color: #bbe1bc; }
   #enjoy-mondays #main-header,
   #enjoy-mondays .content-root,
   #enjoy-mondays .menubar,
   #enjoy-mondays .content,
   #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
-    background-color: #3A3A3A; }
+    background-color: #bbe1bc; }
   @media (min-width: 1180px) {
     #enjoy-mondays .content,
     #enjoy-mondays .content-root {
-      background-color: #000; } }
+      background-color: #2a612c; } }
   #enjoy-mondays .content p, #enjoy-mondays .content ul, #enjoy-mondays .content ol {
-    background-color: #3A3A3A; }
+    background-color: #bbe1bc; }
   #enjoy-mondays .content code {
-    background-color: #000; }
+    background-color: #4CAF50; }
   #enjoy-mondays .content .hljs, #enjoy-mondays .content pre > code {
-    background-color: #000; }
+    background-color: #2a612c; }
 
 #enjoy-mondays #main-header {
-  text-shadow: 0 1px 0 #000;
-  border-bottom: solid 1px #000; }
+  text-shadow: 0 1px 0 #fcfefc;
+  border-bottom: solid 1px #fcfefc; }
   #enjoy-mondays #main-header li {
-    border-right: 1px solid #000; }
+    border-right: 1px solid #2a612c; }
   #enjoy-mondays #main-header h1 + ul {
-    border-left: 1px solid #000; }
+    border-left: 1px solid #4CAF50; }
 #enjoy-mondays .menubar {
-  border-right: solid 1px #000; }
+  border-right: solid 1px #fcfefc; }
 #enjoy-mondays h4 {
-  border-bottom: solid 1px #000; }
+  border-bottom: solid 1px #fcfefc; }
 
 #enjoy-mondays {
   font-family: "Lato", sans-serif;
   font-weight: 100;
-  color: #000; }
+  color: #2a612c; }
   #enjoy-mondays a {
     font-size: 1em;
     font-weight: 900;
-    color: #F3F6FB; }
+    color: #392d68; }
   #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
     font-family: "Dosis", sans-serif !important;
     font-weight: 600 !important;
-    color: #F3F6FB; }
+    color: #392d68; }
   #enjoy-mondays h1 {
     font-size: 2.5em;
     text-transform: uppercase; }
@@ -73,21 +73,21 @@
   #enjoy-mondays .content pre {
     font-size: 1.15em; }
   #enjoy-mondays .content p > code, #enjoy-mondays .content li > code {
-    color: #3A3A3A; }
+    color: #bbe1bc; }
   #enjoy-mondays .content em {
-    color: #000; }
+    color: #4CAF50; }
 
 #enjoy-mondays a {
   text-decoration: none; }
   #enjoy-mondays a:hover, #enjoy-mondays a.active {
-    border-bottom: 3px solid #F3F6FB; }
+    border-bottom: 3px solid #587f37; }
     #enjoy-mondays a:hover::after, #enjoy-mondays a.active::after {
       background: none; }
 #enjoy-mondays .menu a:visited, #enjoy-mondays .menu a:hover, #enjoy-mondays .menu a.active {
   margin-left: -3px;
-  border-left: 3px solid #F3F6FB;
+  border-left: 3px solid #587f37;
   border-bottom: none;
-  color: #F3F6FB !important; }
+  color: #587f37 !important; }
 #enjoy-mondays .menu .level-2 > a {
   padding-left: 3px; }
 
